Switched to Flask

--- a/busbud_data_wrangling.ipynb
+++ b/busbud_data_wrangling.ipynb
@@ -21,7 +21,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -32,7 +32,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -51,7 +51,7 @@
        ]
       }
      ],
-     "prompt_number": 38
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -62,7 +62,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -82,7 +82,7 @@
        ]
       }
      ],
-     "prompt_number": 134
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -93,7 +93,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 135
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -102,7 +102,7 @@
       "for item in target:\n",
       "    if item in sorted_frame.index:\n",
       "        sorted_frame['in target'].ix[item] = True\n",
-      "print '{} entries in `target-list.json`, only {} of which in `cities15000.txt`'.format(len(sorted_target), len(sorted_frame[sorted_frame['in target'] == True]))"
+      "print '{} entries in `target-list.json`, only {} of which in `cities15000.txt`'.format(len(target), len(sorted_frame[sorted_frame['in target'] == True]))"
      ],
      "language": "python",
      "metadata": {},
@@ -115,7 +115,7 @@
        ]
       }
      ],
-     "prompt_number": 138
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -126,13 +126,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "country_frame[:10]\n"
+      "country_frame[:10]"
      ],
      "language": "python",
      "metadata": {},
@@ -418,7 +418,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 36,
+       "prompt_number": 11,
        "text": [
         "                        index              name         asciiname  \\\n",
         "country code geonameid                                              \n",
@@ -500,49 +500,158 @@
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print len(country_frame)"
+      "other_frame = country_frame[['name', 'latitude', 'longitude', 'in target']]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "other_frame[:10]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th>name</th>\n",
+        "      <th>latitude</th>\n",
+        "      <th>longitude</th>\n",
+        "      <th>in target</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>country code</th>\n",
+        "      <th>geonameid</th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th rowspan=\"2\" valign=\"top\">AD</th>\n",
+        "      <th>3040051</th>\n",
+        "      <td>     les Escaldes</td>\n",
+        "      <td> 42.50729</td>\n",
+        "      <td>  1.53414</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3041563</th>\n",
+        "      <td> Andorra la Vella</td>\n",
+        "      <td> 42.50779</td>\n",
+        "      <td>  1.52109</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th rowspan=\"8\" valign=\"top\">AE</th>\n",
+        "      <th>290594 </th>\n",
+        "      <td>   Umm al Qaywayn</td>\n",
+        "      <td> 25.56473</td>\n",
+        "      <td> 55.55517</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>291074 </th>\n",
+        "      <td>   Ras al-Khaimah</td>\n",
+        "      <td> 25.78953</td>\n",
+        "      <td> 55.94320</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>291696 </th>\n",
+        "      <td>     Khawr Fakk\u0101n</td>\n",
+        "      <td> 25.33132</td>\n",
+        "      <td> 56.34199</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>292223 </th>\n",
+        "      <td>            Dubai</td>\n",
+        "      <td> 25.25817</td>\n",
+        "      <td> 55.30472</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>292239 </th>\n",
+        "      <td>             Dib\u0101</td>\n",
+        "      <td> 25.61955</td>\n",
+        "      <td> 56.27291</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>292672 </th>\n",
+        "      <td>          Sharjah</td>\n",
+        "      <td> 25.33737</td>\n",
+        "      <td> 55.41206</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>292688 </th>\n",
+        "      <td>        Ar Ruways</td>\n",
+        "      <td> 24.11028</td>\n",
+        "      <td> 52.73056</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>292878 </th>\n",
+        "      <td>      Al Fujayrah</td>\n",
+        "      <td> 25.11641</td>\n",
+        "      <td> 56.34141</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
        "text": [
-        "22861\n"
+        "                                    name  latitude  longitude in target\n",
+        "country code geonameid                                                 \n",
+        "AD           3040051        les Escaldes  42.50729    1.53414     False\n",
+        "             3041563    Andorra la Vella  42.50779    1.52109     False\n",
+        "AE           290594       Umm al Qaywayn  25.56473   55.55517     False\n",
+        "             291074       Ras al-Khaimah  25.78953   55.94320     False\n",
+        "             291696         Khawr Fakk\u0101n  25.33132   56.34199     False\n",
+        "             292223                Dubai  25.25817   55.30472     False\n",
+        "             292239                 Dib\u0101  25.61955   56.27291     False\n",
+        "             292672              Sharjah  25.33737   55.41206     False\n",
+        "             292688            Ar Ruways  24.11028   52.73056     False\n",
+        "             292878          Al Fujayrah  25.11641   56.34141     False"
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from bs4 import BeautifulSoup\n",
-      "import requests"
+      ".input = requests.get('https://www.cia.gov/library/publications/the-world-factbook/appendix/appendix-d.html')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 46
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "input = requests.get('https://www.cia.gov/library/publications/the-world-factbook/appendix/appendix-d.html')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 90
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -553,7 +662,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 139
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -564,7 +673,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 140
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -584,7 +693,7 @@
        ]
       }
      ],
-     "prompt_number": 172
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -607,134 +716,34 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-173-318da3ce13d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mcontents\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontents\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mtwo_letter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mthree_letter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtwo_letter\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthree_letter\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mcountry_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtwo_letter\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mthree_letter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m<ipython-input-19-318da3ce13d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mcontents\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontents\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mtwo_letter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mthree_letter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtwo_letter\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthree_letter\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mcountry_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtwo_letter\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mthree_letter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
         "\u001b[0;31mIndexError\u001b[0m: list index out of range"
        ]
       }
      ],
-     "prompt_number": 173
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "country_dict"
+      "country_dict[:10]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 165,
-       "text": [
-        "{u'AD': u'AND',\n",
-        " u'AF': u'AFG',\n",
-        " u'AG': u'ATG',\n",
-        " u'AI': u'AIA',\n",
-        " u'AL': u'ALB',\n",
-        " u'AM': u'ARM',\n",
-        " u'AO': u'AGO',\n",
-        " u'AQ': u'ATA',\n",
-        " u'AR': u'ARG',\n",
-        " u'AS': u'ASM',\n",
-        " u'AT': u'AUT',\n",
-        " u'AU': u'AUS',\n",
-        " u'AW': u'ABW',\n",
-        " u'AZ': u'AZE',\n",
-        " u'BA': u'BIH',\n",
-        " u'BB': u'BRB',\n",
-        " u'BD': u'BGD',\n",
-        " u'BE': u'BEL',\n",
-        " u'BF': u'BFA',\n",
-        " u'BG': u'BGR',\n",
-        " u'BH': u'BHR',\n",
-        " u'BI': u'BDI',\n",
-        " u'BJ': u'BEN',\n",
-        " u'BM': u'BMU',\n",
-        " u'BN': u'BRN',\n",
-        " u'BO': u'BOL',\n",
-        " u'BR': u'BRA',\n",
-        " u'BS': u'BHS',\n",
-        " u'BT': u'BTN',\n",
-        " u'BV': u'BVT',\n",
-        " u'BW': u'BWA',\n",
-        " u'BY': u'BLR',\n",
-        " u'BZ': u'BLZ',\n",
-        " u'CA': u'CAN',\n",
-        " u'CC': u'CCK',\n",
-        " u'CD': u'COD',\n",
-        " u'CF': u'CAF',\n",
-        " u'CG': u'COG',\n",
-        " u'CI': u'CIV',\n",
-        " u'CK': u'COK',\n",
-        " u'CL': u'CHL',\n",
-        " u'CM': u'CMR',\n",
-        " u'CN': u'CHN',\n",
-        " u'CO': u'COL',\n",
-        " u'CR': u'CRI',\n",
-        " u'CU': u'CUB',\n",
-        " u'CV': u'CPV',\n",
-        " u'CW': u'CUW',\n",
-        " u'CX': u'CXR',\n",
-        " u'CY': u'CYP',\n",
-        " u'CZ': u'CZE',\n",
-        " u'DE': u'DEU',\n",
-        " u'DJ': u'DJI',\n",
-        " u'DK': u'DNK',\n",
-        " u'DM': u'DMA',\n",
-        " u'DO': u'DOM',\n",
-        " u'DZ': u'DZA',\n",
-        " u'EC': u'ECU',\n",
-        " u'EE': u'EST',\n",
-        " u'EG': u'EGY',\n",
-        " u'ER': u'ERI',\n",
-        " u'ET': u'ETH',\n",
-        " u'FI': u'FIN',\n",
-        " u'FJ': u'FJI',\n",
-        " u'FK': u'FLK',\n",
-        " u'FO': u'FRO',\n",
-        " u'FR': u'FRA',\n",
-        " u'FX': u'FXX',\n",
-        " u'GA': u'GAB',\n",
-        " u'GD': u'GRD',\n",
-        " u'GE': u'GEO',\n",
-        " u'GF': u'GUF',\n",
-        " u'GG': u'GGY',\n",
-        " u'GH': u'GHA',\n",
-        " u'GI': u'GIB',\n",
-        " u'GL': u'GRL',\n",
-        " u'GM': u'GMB',\n",
-        " u'GN': u'GIN',\n",
-        " u'GP': u'GLP',\n",
-        " u'GQ': u'GNQ',\n",
-        " u'GR': u'GRC',\n",
-        " u'GT': u'GTM',\n",
-        " u'GU': u'GUM',\n",
-        " u'GW': u'GNB',\n",
-        " u'GY': u'GUY',\n",
-        " u'HK': u'HKG',\n",
-        " u'HM': u'HMD',\n",
-        " u'HN': u'HND',\n",
-        " u'HR': u'HRV',\n",
-        " u'HT': u'HTI',\n",
-        " u'HU': u'HUN',\n",
-        " u'IO': u'IOT',\n",
-        " u'KH': u'KHM',\n",
-        " u'KM': u'COM',\n",
-        " u'KY': u'CYM',\n",
-        " u'MM': u'MMR',\n",
-        " u'PF': u'PYF',\n",
-        " u'PS': u'PSE',\n",
-        " u'SV': u'SLV',\n",
-        " u'TD': u'TCD',\n",
-        " u'TF': u'ATF',\n",
-        " u'VA': u'VAT',\n",
-        " u'VG': u'VGB'}"
+       "ename": "NameError",
+       "evalue": "name 'country_dict' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-1-54a628e1cb40>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcountry_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mNameError\u001b[0m: name 'country_dict' is not defined"
        ]
       }
      ],
-     "prompt_number": 165
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -785,6 +794,37 @@
       }
      ],
      "prompt_number": 168
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "global_data = json.loads(open('data/ne_world.json').read())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "global_data['features'][0].keys()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 25,
+       "text": [
+        "[u'geometry', u'type', u'properties']"
+       ]
+      }
+     ],
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
