XMLHttpRequest working, apps communicating

--- a/busbud_data_wrangling.ipynb
+++ b/busbud_data_wrangling.ipynb
@@ -16,12 +16,12 @@
       "import json\n",
       "\n",
       "names = ['geonameid', 'name', 'asciiname', 'alternatenames', 'latitude', 'longitude', 'feature class', 'feature code', 'country code', 'cc2', 'admin1 code', 'admin2 code', 'admin3 code', 'admin4 code', 'population', 'elevation', 'dem', 'timezone', 'modification date']\n",
-      "raw = pd.read_table('./data/cities15000.txt', names=names)"
+      "raw = pd.read_table('static/data/cities15000.txt', names=names)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
@@ -32,7 +32,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 48
     },
     {
      "cell_type": "code",
@@ -51,7 +51,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 49
     },
     {
      "cell_type": "code",
@@ -62,13 +62,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 50
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "target = json.loads(open('./data/target-list.json').read())\n",
+      "target = json.loads(open('static/data/target-list.json').read())\n",
       "print '{} countries in target-list'.format(len(target))"
      ],
      "language": "python",
@@ -82,7 +82,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 51
     },
     {
      "cell_type": "code",
@@ -93,7 +93,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 52
     },
     {
      "cell_type": "code",
@@ -115,7 +115,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 53
     },
     {
      "cell_type": "code",
@@ -126,7 +126,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 54
     },
     {
      "cell_type": "code",
@@ -418,7 +418,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 55,
        "text": [
         "                        index              name         asciiname  \\\n",
         "country code geonameid                                              \n",
@@ -500,7 +500,7 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 55
     },
     {
      "cell_type": "code",
@@ -511,7 +511,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 56
     },
     {
      "cell_type": "code",
@@ -623,7 +623,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 57,
        "text": [
         "                                    name  latitude  longitude in target\n",
         "country code geonameid                                                 \n",
@@ -640,36 +640,45 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 57
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      ".input = requests.get('https://www.cia.gov/library/publications/the-world-factbook/appendix/appendix-d.html')"
+      "countries_response = pd.io.html.read_html('http://www.geonames.org/countries/', attrs={'id': 'countries'}, flavor='html5lib', infer_types=False, header=0)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 68
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "soup = BeautifulSoup(input.content)"
+      "country_table = countries_response[0][['ISO-3166alpha2', 'Country']].set_index('ISO-3166alpha2')\n",
+      "# country_lookup_table = country_table.set_index('ISO-3166alpha2')\n",
+      "country_lookup_table.ix[u'AE']['Country']"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 72,
+       "text": [
+        "u'United Arab Emirates'"
+       ]
+      }
+     ],
+     "prompt_number": 72
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "blob = soup.find(id = 'GetAppendix_D')"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": [],
