--- a/busbud_data_wrangling.ipynb
+++ b/busbud_data_wrangling.ipynb
@@ -517,130 +517,21 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "other_frame[:10]"
+      "other_frame.ix['AD']['name'].count()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "html": [
-        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-        "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th></th>\n",
-        "      <th>name</th>\n",
-        "      <th>latitude</th>\n",
-        "      <th>longitude</th>\n",
-        "      <th>in target</th>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>country code</th>\n",
-        "      <th>geonameid</th>\n",
-        "      <th></th>\n",
-        "      <th></th>\n",
-        "      <th></th>\n",
-        "      <th></th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
-        "  <tbody>\n",
-        "    <tr>\n",
-        "      <th rowspan=\"2\" valign=\"top\">AD</th>\n",
-        "      <th>3040051</th>\n",
-        "      <td>     les Escaldes</td>\n",
-        "      <td> 42.50729</td>\n",
-        "      <td>  1.53414</td>\n",
-        "      <td> False</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>3041563</th>\n",
-        "      <td> Andorra la Vella</td>\n",
-        "      <td> 42.50779</td>\n",
-        "      <td>  1.52109</td>\n",
-        "      <td> False</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th rowspan=\"8\" valign=\"top\">AE</th>\n",
-        "      <th>290594 </th>\n",
-        "      <td>   Umm al Qaywayn</td>\n",
-        "      <td> 25.56473</td>\n",
-        "      <td> 55.55517</td>\n",
-        "      <td> False</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>291074 </th>\n",
-        "      <td>   Ras al-Khaimah</td>\n",
-        "      <td> 25.78953</td>\n",
-        "      <td> 55.94320</td>\n",
-        "      <td> False</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>291696 </th>\n",
-        "      <td>     Khawr Fakk\u0101n</td>\n",
-        "      <td> 25.33132</td>\n",
-        "      <td> 56.34199</td>\n",
-        "      <td> False</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>292223 </th>\n",
-        "      <td>            Dubai</td>\n",
-        "      <td> 25.25817</td>\n",
-        "      <td> 55.30472</td>\n",
-        "      <td> False</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>292239 </th>\n",
-        "      <td>             Dib\u0101</td>\n",
-        "      <td> 25.61955</td>\n",
-        "      <td> 56.27291</td>\n",
-        "      <td> False</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>292672 </th>\n",
-        "      <td>          Sharjah</td>\n",
-        "      <td> 25.33737</td>\n",
-        "      <td> 55.41206</td>\n",
-        "      <td> False</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>292688 </th>\n",
-        "      <td>        Ar Ruways</td>\n",
-        "      <td> 24.11028</td>\n",
-        "      <td> 52.73056</td>\n",
-        "      <td> False</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>292878 </th>\n",
-        "      <td>      Al Fujayrah</td>\n",
-        "      <td> 25.11641</td>\n",
-        "      <td> 56.34141</td>\n",
-        "      <td> False</td>\n",
-        "    </tr>\n",
-        "  </tbody>\n",
-        "</table>\n",
-        "</div>"
-       ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 57,
+       "prompt_number": 78,
        "text": [
-        "                                    name  latitude  longitude in target\n",
-        "country code geonameid                                                 \n",
-        "AD           3040051        les Escaldes  42.50729    1.53414     False\n",
-        "             3041563    Andorra la Vella  42.50779    1.52109     False\n",
-        "AE           290594       Umm al Qaywayn  25.56473   55.55517     False\n",
-        "             291074       Ras al-Khaimah  25.78953   55.94320     False\n",
-        "             291696         Khawr Fakk\u0101n  25.33132   56.34199     False\n",
-        "             292223                Dubai  25.25817   55.30472     False\n",
-        "             292239                 Dib\u0101  25.61955   56.27291     False\n",
-        "             292672              Sharjah  25.33737   55.41206     False\n",
-        "             292688            Ar Ruways  24.11028   52.73056     False\n",
-        "             292878          Al Fujayrah  25.11641   56.34141     False"
+        "2"
        ]
       }
      ],
-     "prompt_number": 57
+     "prompt_number": 78
     },
     {
      "cell_type": "code",
@@ -659,7 +550,8 @@
      "input": [
       "country_table = countries_response[0][['ISO-3166alpha2', 'Country']].set_index('ISO-3166alpha2')\n",
       "# country_lookup_table = country_table.set_index('ISO-3166alpha2')\n",
-      "country_lookup_table.ix[u'AE']['Country']"
+      "country_lookup_table.ix[u'AE']['Country']\n",
+      "# country_lookup_table.ix[u'AE'].count(level='geonameid')"
      ],
      "language": "python",
      "metadata": {},
@@ -667,13 +559,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 72,
+       "prompt_number": 76,
        "text": [
         "u'United Arab Emirates'"
        ]
       }
      ],
-     "prompt_number": 72
+     "prompt_number": 76
     },
     {
      "cell_type": "code",
