--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -21,7 +21,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 47
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -32,7 +32,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 48
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -51,7 +51,7 @@
        ]
       }
      ],
-     "prompt_number": 49
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -62,7 +62,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 50
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -82,7 +82,7 @@
        ]
       }
      ],
-     "prompt_number": 51
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -93,7 +93,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 52
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -115,7 +115,7 @@
        ]
       }
      ],
-     "prompt_number": 53
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -126,7 +126,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 54
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -418,7 +418,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 55,
+       "prompt_number": 9,
        "text": [
         "                        index              name         asciiname  \\\n",
         "country code geonameid                                              \n",
@@ -500,7 +500,7 @@
        ]
       }
      ],
-     "prompt_number": 55
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -511,7 +511,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 56
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -525,13 +525,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 78,
+       "prompt_number": 11,
        "text": [
         "2"
        ]
       }
      ],
-     "prompt_number": 78
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -542,15 +542,16 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 68
+     "prompt_number": 67
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "country_table = countries_response[0][['ISO-3166alpha2', 'Country']].set_index('ISO-3166alpha2')\n",
+      "country_series = countries_response[0][['ISO-3166alpha2', 'Country']].set_index('ISO-3166alpha2')['Country']\n",
+      "country_series.ix['BL']\n",
       "# country_lookup_table = country_table.set_index('ISO-3166alpha2')\n",
-      "country_lookup_table.ix[u'AE']['Country']\n",
+      "# country_lookup_table.ix[u'AE']['Country']\n",
       "# country_lookup_table.ix[u'AE'].count(level='geonameid')"
      ],
      "language": "python",
@@ -559,22 +560,36 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 76,
+       "prompt_number": 78,
        "text": [
-        "u'United Arab Emirates'"
+        "u'Saint Barth\\xc3\\xa9lemy'"
        ]
       }
      ],
-     "prompt_number": 76
+     "prompt_number": 78
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "barf = country_series.to_json(force_ascii=True)\n",
+      "barf[:500]\n",
+      "unbarf = json.loads(barf)\n",
+      "unbarf['BL']"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 17
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 84,
+       "text": [
+        "u'Saint Barth\\xc3\\xa9lemy'"
+       ]
+      }
+     ],
+     "prompt_number": 84
     },
     {
      "cell_type": "code",
