playing with dataframes

--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -23,7 +23,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 36
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -36,13 +36,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 37
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print '{} entries dropped because no country code'.format(len(raw) - len(slim_frame))"
+      "print '{} entries dropped because no country code'.format(len(raw) - len(frame))"
      ],
      "language": "python",
      "metadata": {},
@@ -55,7 +55,7 @@
        ]
       }
      ],
-     "prompt_number": 38
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -199,7 +199,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 39,
+       "prompt_number": 5,
        "text": [
         "                       name         asciiname  latitude  longitude  \\\n",
         "geonameid                                                            \n",
@@ -229,7 +229,7 @@
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -251,7 +251,7 @@
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -264,31 +264,85 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 42
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "country_frame = frame.reset_index().set_index('country code')\n",
-      "country_dict = country_frame.ix['US']['in target'].value_counts().to_dict()\n",
-      "country_dict['False']"
+      "country_frame = frame.set_index('country code')\n",
+      "country_frame.ix['US'][country_frame.ix['US']['in target']==True]['name'].tolist()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "KeyError",
-       "evalue": "'False'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-47-3ff313231c4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcountry_frame\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'country code'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcountry_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcountry_frame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'US'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'in target'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcountry_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'False'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;31mKeyError\u001b[0m: 'False'"
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "['Washington, D. C.',\n",
+        " 'Bonita Springs',\n",
+        " 'Fort Myers',\n",
+        " 'Fort Pierce',\n",
+        " 'Jupiter',\n",
+        " 'Lakeland',\n",
+        " 'Miami Beach',\n",
+        " 'Port Charlotte',\n",
+        " 'Sarasota',\n",
+        " 'Stuart',\n",
+        " 'West Palm Beach',\n",
+        " 'Savannah',\n",
+        " 'Atlantic City',\n",
+        " 'Cincinnati',\n",
+        " 'Columbia',\n",
+        " 'Chicago',\n",
+        " 'Boston',\n",
+        " 'Hanover',\n",
+        " 'Newton',\n",
+        " 'Pittsfield',\n",
+        " 'South Hadley',\n",
+        " 'Springfield',\n",
+        " 'Worcester',\n",
+        " 'Augusta',\n",
+        " 'Portland',\n",
+        " 'Bergenfield',\n",
+        " 'Bloomfield',\n",
+        " 'Dumont',\n",
+        " 'Kearny',\n",
+        " 'Livingston',\n",
+        " 'Old Bridge',\n",
+        " 'Trenton',\n",
+        " 'West Milford',\n",
+        " 'Wyckoff',\n",
+        " 'Amsterdam',\n",
+        " 'Brooklyn',\n",
+        " 'Elmont',\n",
+        " 'Huntington',\n",
+        " 'Newburgh',\n",
+        " 'Poughkeepsie',\n",
+        " 'Ashtabula',\n",
+        " 'Allentown',\n",
+        " 'Carlisle',\n",
+        " 'Easton',\n",
+        " 'Monroeville',\n",
+        " 'Milwaukee',\n",
+        " 'Nogales',\n",
+        " 'Corona',\n",
+        " 'Huntington Park',\n",
+        " 'Ontario',\n",
+        " 'Palm Springs',\n",
+        " 'Tustin',\n",
+        " 'Victorville',\n",
+        " 'Cedar City',\n",
+        " 'Washington',\n",
+        " 'Grants Pass',\n",
+        " 'Hillsboro',\n",
+        " 'Walla Walla']"
        ]
       }
      ],
-     "prompt_number": 47
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
